--- a/_includes/_custom/header.html
+++ b/_includes/_custom/header.html
@@ -11,3 +11,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script>
   gtag('event', 'conversion', {'send_to': 'AW-11180626156/qtonCMz-8N8YEOyhq9Mp'});
 </script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6PR14XMJWG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6PR14XMJWG');
+</script>
